changed Verbatim to verbatim

--- a/exercises/exercises.tex
+++ b/exercises/exercises.tex
@@ -324,12 +324,12 @@ Note that the values for the \texttt{display} option must be on separate lines.
 After the last option in the above table, leave an empty space and create \texttt{@Note} and \texttt{@Bug}
 sections and add any text that describes your code.
 \item On line 1 of the file \texttt{fd1d\_heat\_explicit.f90} add the following documentation:
-\begin{Verbatim} [commandchars=\\\{\}]
+\begin{verbatim} 
 !> \textit{<Your name>, <Your affiliation>}
 !> Solves the one dimensional heat diffusion equation
 !> \( \frac{\partial H}{\partial t} 
 !>     - \kappa\frac{\partial^{2} H}{\partial x^{2}} = f(x) \)
-\end{Verbatim}
+\end{verbatim}
 \item On line 1 of the module file \texttt{CFL\_mod.f90} add the following comments:
 \begin{verbatim}
 !> this module calculates the CFL number
